--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "lint": "npx eslint . -c ./.github/linters/.eslintrc.yml",
     "package": "ncc build src/index.js --license licenses.txt",
     "package:watch": "npm run package -- --watch",
-    "test": "(jest && make-coverage-badge --output-path ./badges/coverage.svg) || make-coverage-badge --output-path ./badges/coverage.svg",
+    "test": "jest --passWithNoTests",
     "all": "npm run format:write && npm run lint && npm run test && npm run package"
   },
   "license": "MIT",
@@ -63,7 +63,8 @@
     ]
   },
   "dependencies": {
-    "@actions/core": "^1.10.1"
+    "@actions/core": "^1.10.1",
+    "@actions/github": "^5.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.23.0",
